--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html style="background-color:hsla(0,90%,55%,0)" lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>E.F.M.O. Boadilla 'E'</title>
+  <title>E.F.M.O. Boadilla 'B'</title>
   <style>
     img {
       border-radius: 200px 200px 200px 200px;
@@ -23,7 +23,7 @@
 font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
   <strong>   E.F.M.O. Boadilla 'B'</strong></h1>
 <p style="text-align: justify; margin: 50px;">
-  Bienvenido a la página web sobre el E.F.M.O. Boadilla 'E', donde la pasión por el fútbol se une a la amistad. Aquí encontrarás todo sobre nuestro equipo, desde nuestras últimas hazañas en el campo hasta las estadísticas que vamos conformando. ¡Disfrutemos juntos de esta gran aventura!</p>
+  Bienvenido a la página web sobre el E.F.M.O. Boadilla 'B', donde la pasión por el fútbol se une a la amistad. Aquí encontrarás todo sobre nuestro equipo, desde nuestras últimas hazañas en el campo hasta las estadísticas que vamos conformando. ¡Disfrutemos juntos de esta gran aventura!</p>
 
 <div style="padding: 10px; float: left; width: 45%; text-align: center;">
   <a
@@ -63,7 +63,7 @@ font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
 
 <div style="padding: 10px; float: left; width: 45%; text-align: center;">
   <a
-    href="StatsTemp24-25.html"
+    href="StatsTemp25-26.html"
     target="_blank">
     <img alt="Logo stats 25 26"
          class="imagen"
@@ -79,7 +79,7 @@ font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
          width="400" height="400"></a></div>
 <br>
 <a
-  href="StatsTemp24-25.html"
+  href="StatsTemp25-26.html"
   target="_blank">
   <div style="padding: 10px; float: left; width: 45%; text-align: center; color: black">
     <ins><em>Stats Temp. 24/25</em></ins>
@@ -112,7 +112,7 @@ font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
          width="400" height="400"></a></div>
 <br>
 <a
-  href="EncuestasMVP2425.html"
+  href="EncuestasMVP2526.html"
   target="_blank">
   <div style="padding: 10px; float: left; width: 45%; text-align: center; color: black">
     <ins><em>Encuestas MVP 25/26</em></ins>
