--- a/StatsTemp25-26.html
+++ b/StatsTemp25-26.html
@@ -116,33 +116,33 @@
 <script>
   // Datos de los jugadores con los minutos jugados en cada partido
   const jugadores = [
-    {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [45, 90, 80, 0, 84, 70, 64, 88, 0, 0, 0, 90, 0, 83, 90, 81, 68, 45, 0, 90, 80, 30, 0, 81, 0, 0, 58, 90, 0, 45]},
-    {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [45, 0, 10, 0, 6, 20, 26, 2, 90, 90, 90, 0, 90, 7, 0, 9, 22, 45, 0, 0, 10, 60, 90, 9, 0, 0, 32, 0, 90, 45]},
-    {nombre: "Rafa", goles: 9, asistencias: 6, minutos: [90, 90, 90, 0, 90, 90, 90, 90, 90, 90, 90, 78, 0, 90, 0, 90, 0, 0, 0, 90, 0, 90, 90, 90, 90, 0, 90, 90, 90, 90]},
-    {nombre: "Álvaro G.S.", goles: 3, asistencias: 1, minutos: [0, 33, 90, 0, 84, 53, 90, 79, 90, 59, 90, 90, 90, 0, 90, 90, 90, 90, 0, 59, 90, 60, 90, 90, 90, 0, 0, 0, 0, 90]},
+    {nombre: "Agudo", goles: 0, asistencias: 0, minutos: [0]},
+    {nombre: "Gabri", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [0]},
+    {nombre: "Álvaro G.S.", goles: 0, asistencias: 0, minutos: [0]},
     {nombre: "Erik", goles: 0, asistencias: 0, minutos: [25, 57, 0, 0, 26, 90, 0, 11, 29, 0, 0, 67, 53, 61, 90, 90, 57, 0, 0, 31, 0, 90, 90, 0, 0, 0, 45, 82, 54, 0]},
-    {nombre: "José An", goles: 0, asistencias: 1, minutos: [65, 33, 90, 0, 76, 85, 64, 90, 90, 90, 90, 23, 0, 0, 38, 81, 90, 90, 0, 90, 90, 90, 90, 0, 0, 0, 90, 90, 54, 77]},
+    {nombre: "José An", goles: 0, asistencias: 0, minutos: [65, 33, 90, 0, 76, 85, 64, 90, 90, 90, 90, 23, 0, 0, 38, 81, 90, 90, 0, 90, 90, 90, 90, 0, 0, 0, 90, 90, 54, 77]},
     {nombre: "Carlos A", goles: 0, asistencias: 0, minutos: [8, 0, 0, 0, 6, 37, 26, 11, 0, 31, 0, 8, 90, 14, 0, 0, 0, 0, 0, 0, 0, 0, 0]}, // Se va del equipo: no se actualiza más
-    {nombre: "Carlacas", goles: 0, asistencias: 1, minutos: [90, 57, 0, 0, 0, 0, 64, 51, 61, 90, 90, 90, 90, 90, 52, 71, 90, 90, 0, 79, 0, 0, 24, 45, 90, 0, 90, 0, 90, 90]},
-    {nombre: "Dani", goles: 6, asistencias: 3, minutos: [90, 21, 90, 0, 90, 90, 90, 90, 90, 90, 0, 67, 90, 90, 90, 0, 90, 72, 0, 79, 90, 60, 66, 90, 90, 0, 69, 90, 45, 77]},
+    {nombre: "Carlacas", goles: 0, asistencias: 0, minutos: [90, 57, 0, 0, 0, 0, 64, 51, 61, 90, 90, 90, 90, 90, 52, 71, 90, 90, 0, 79, 0, 0, 24, 45, 90, 0, 90, 0, 90, 90]},
+    {nombre: "Dani", goles: 0, asistencias: 0, minutos: [90, 21, 90, 0, 90, 90, 90, 90, 90, 90, 0, 67, 90, 90, 90, 0, 90, 72, 0, 79, 90, 60, 66, 90, 90, 0, 69, 90, 45, 77]},
     {nombre: "Agustín", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 15, 0, 9, 0, 18, 0, 11, 28, 30, 0, 45, 45, 0, 0, 8, 36, 13]},
     {nombre: "Juan Pablo", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 45, 0, 0, 0, 0, 0]},
-    {nombre: "Madero", goles: 4, asistencias: 3, minutos: [82, 90, 90, 0, 64, 70, 81, 51, 61, 36, 56, 67, 60, 90, 72, 25, 0, 90, 0, 79, 90, 30, 75, 90, 90, 0, 90, 90, 61, 31]},
-    {nombre: "Sagi", goles: 3, asistencias: 0, minutos: [55, 57, 90, 0, 64, 90, 64, 79, 76, 36, 56, 90, 90, 61, 38, 81, 90, 68, 0, 59, 90, 60, 66, 54, 45, 0, 45, 82, 36, 59]},
-    {nombre: "Gárate", goles: 2, asistencias: 3, minutos: [0, 33, 10, 0, 14, 0, 26, 11, 29, 31, 34, 8, 30, 29, 52, 9, 33, 22, 0, 31, 66, 90, 24, 45, 45, 0, 45, 33, 36, 77]},
-    {nombre: "Adri", goles: 5, asistencias: 10, minutos: [0, 33, 85, 0, 90, 90, 90, 79, 0, 90, 90, 82, 90, 83, 90, 65, 90, 86, 0, 0, 90, 90, 66, 88, 90, 0, 90, 57, 90, 50]},
-    {nombre: "Martín", goles: 6, asistencias: 7, minutos: [35, 33, 80, 0, 90, 0, 64, 90, 90, 90, 0, 89, 0, 90, 90, 90, 90, 90, 0, 90, 80, 0, 90, 45, 0, 0, 90, 89, 54, 40]},
-    {nombre: "Mario Perea", goles: 5, asistencias: 1, minutos: [82, 57, 0, 0, 14, 37, 26, 39, 14, 54, 76, 23, 90, 29, 0, 25, 0, 0, 0, 31, 62, 60, 24, 45, 50, 0, 21, 0, 45, 0]},
-    {nombre: "Alvarito", goles: 9, asistencias: 10, minutos: [90, 57, 90, 0, 76, 53, 0, 0, 55, 54, 90, 23, 90, 83, 90, 81, 90, 90, 0, 90, 90, 90, 75, 90, 40, 0, 90, 90, 54, 90]},
-    {nombre: "Mario", goles: 0, asistencias: 1, minutos: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 19, 22, 4, 0, 0, 0, 0, 0, 2, 0, 0, 0, 1, 29, 13]},
-    {nombre: "Jaime", goles: 0, asistencias: 3, minutos: [0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 14, 1, 0, 7, 18, 0, 0, 0, 0, 11, 0, 0, 15, 0, 0, 0, 0, 8, 36, 13]},
-    {nombre: "Fer", goles: 7, asistencias: 3, minutos: [90, 90, 70, 0, 90, 90, 90, 88, 35, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]},
-    {nombre: "Elo", goles: 12, asistencias: 1, minutos: [90, 57, 20, 0, 26, 0, 26, 39, 90, 59, 56, 82, 90, 61, 84, 65, 68, 90, 0, 59, 24, 30, 0, 36, 69, 0, 45, 89, 45, 77]},
-    {nombre: "David", goles: 3, asistencias: 0, minutos: [8, 33, 5, 0, 0, 20, 9, 2, 0, 0, 0, 0, 0, 7, 6, 9, 0, 0, 0, 11, 10, 30, 15, 45, 21, 0, 0, 1, 45, 13]},
+    {nombre: "Madero", goles: 0, asistencias: 0, minutos: [82, 90, 90, 0, 64, 70, 81, 51, 61, 36, 56, 67, 60, 90, 72, 25, 0, 90, 0, 79, 90, 30, 75, 90, 90, 0, 90, 90, 61, 31]},
+    {nombre: "Sagi", goles: 0, asistencias: 0, minutos: [55, 57, 90, 0, 64, 90, 64, 79, 76, 36, 56, 90, 90, 61, 38, 81, 90, 68, 0, 59, 90, 60, 66, 54, 45, 0, 45, 82, 36, 59]},
+    {nombre: "Gárate", goles: 0, asistencias: 0, minutos: [0, 33, 10, 0, 14, 0, 26, 11, 29, 31, 34, 8, 30, 29, 52, 9, 33, 22, 0, 31, 66, 90, 24, 45, 45, 0, 45, 33, 36, 77]},
+    {nombre: "Adri", goles: 0, asistencias: 0, minutos: [0, 33, 85, 0, 90, 90, 90, 79, 0, 90, 90, 82, 90, 83, 90, 65, 90, 86, 0, 0, 90, 90, 66, 88, 90, 0, 90, 57, 90, 50]},
+    {nombre: "Martín", goles: 0, asistencias: 0, minutos: [35, 33, 80, 0, 90, 0, 64, 90, 90, 90, 0, 89, 0, 90, 90, 90, 90, 90, 0, 90, 80, 0, 90, 45, 0, 0, 90, 89, 54, 40]},
+    {nombre: "Mario Perea", goles: 0, asistencias: 0, minutos: [82, 57, 0, 0, 14, 37, 26, 39, 14, 54, 76, 23, 90, 29, 0, 25, 0, 0, 0, 31, 62, 60, 24, 45, 50, 0, 21, 0, 45, 0]},
+    {nombre: "Alvarito", goles: 0, asistencias: 0, minutos: [90, 57, 90, 0, 76, 53, 0, 0, 55, 54, 90, 23, 90, 83, 90, 81, 90, 90, 0, 90, 90, 90, 75, 90, 40, 0, 90, 90, 54, 90]},
+    {nombre: "Mario", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 19, 22, 4, 0, 0, 0, 0, 0, 2, 0, 0, 0, 1, 29, 13]},
+    {nombre: "Jaime", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 14, 1, 0, 7, 18, 0, 0, 0, 0, 11, 0, 0, 15, 0, 0, 0, 0, 8, 36, 13]},
+    {nombre: "Fer", goles: 0, asistencias: 0, minutos: [90, 90, 70, 0, 90, 90, 90, 88, 35, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]},
+    {nombre: "Elo", goles: 0, asistencias: 0, minutos: [90, 57, 20, 0, 26, 0, 26, 39, 90, 59, 56, 82, 90, 61, 84, 65, 68, 90, 0, 59, 24, 30, 0, 36, 69, 0, 45, 89, 45, 77]},
+    {nombre: "David", goles: 0, asistencias: 0, minutos: [8, 33, 5, 0, 0, 20, 9, 2, 0, 0, 0, 0, 0, 7, 6, 9, 0, 0, 0, 11, 10, 30, 15, 45, 21, 0, 0, 1, 45, 13]},
     {nombre: "Jorge (CD)", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 90, 0, 0, 0, 0, 0]},
     {nombre: "Edu (CD)", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 37, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]},
     {nombre: "Joaquín (CB)", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 34, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]},
-    {nombre: "Kebe (CB)", goles: 1, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 34, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]}
+    {nombre: "Kebe (CB)", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 34, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]}
   ];
 
   // Generar las tarjetas de los jugadores
