--- a/EncuestasMVP2526.html
+++ b/EncuestasMVP2526.html
@@ -29,7 +29,7 @@
 
   <div style="padding: 10px; float: left; width: 45%; text-align: center;">
     <a
-      href="https://docs.google.com/document/d/1TkT2oZPqFrDuQjDdZVuHZTaE6YTGpFaeflbT7uyp99Y/edit?tab=t.0#heading=h.vefa5wuxc91v"
+      href=""
       target="_blank">
       <img alt="Jornada1"
            class="imagen"
@@ -37,14 +37,14 @@
       <img src="Jornada1.jpg" height="333" width="499"/></a></div>
   <div style="padding: 10px; float: right; width: 45%; text-align: center;">
     <a
-      href="https://docs.google.com/document/d/16_sUFlq6EL3hPqLblAxSOZ9rzfQxxGmK-LOCi3_nrAM/edit?tab=t.0"
+      href=""
       target="_blank">
       <img alt="Jornada2"
            class="imagen"
       <img src="Jornada2.jpg" height="333" width="499"/></a></div>
 
   <a
-    href="https://docs.google.com/document/d/1TkT2oZPqFrDuQjDdZVuHZTaE6YTGpFaeflbT7uyp99Y/edit?tab=t.0#heading=h.vefa5wuxc91v"
+    href=""
     target="_blank">
     <div style="padding: 10px; float: left; width: 45%; text-align: center; color: black">
       <em>
@@ -52,7 +52,7 @@
       </em></div>
   </a>
   <a
-    href="https://docs.google.com/document/d/16_sUFlq6EL3hPqLblAxSOZ9rzfQxxGmK-LOCi3_nrAM/edit?tab=t.0"
+    href=""
     target="_blank">
     <div style="padding: 10px; float: right; width: 45%; text-align: center; color: black">
       <em>
