--- a/StatsTemp25-26.html
+++ b/StatsTemp25-26.html
@@ -117,7 +117,7 @@
   // Datos de los jugadores con los minutos jugados en cada partido
   const jugadores = [
     {nombre: "Agudo", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [<!--0, 0, 0-->]},
+    {nombre: "Gabri", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Álvaro G.S.", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Erik", goles: 0, asistencias: 0, minutos: []},
