--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -127,7 +127,7 @@
   <h1>Fantasy EFMO</h1>
   <ul class="player-list">
     <li class="player-item" onclick="toggleDetails('player1')" id="player1-item">
-      <div class="player-name">Gabri</div>
+      <div class="player-name">Agudo</div>
       <div class="player-stats" id="player1-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -139,7 +139,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player2')" id="player2-item">
-      <div class="player-name">Álvaro</div>
+      <div class="player-name">Gabri</div>
       <div class="player-stats" id="player2-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -151,7 +151,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player3')" id="player3-item">
-      <div class="player-name">Rafa</div>
+      <div class="player-name">Álvaro</div>
       <div class="player-stats" id="player3-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -440,35 +440,35 @@
   const players = [
     {
       id: 'player1',
-      name: 'Gabri',
-      scores: [8, 3, 10, null, 6, 0, 1, 6, null, null, null, 11, null, 7, 5, 6, 3, 2, null, 7, 7, 4, null, 3, null, null, 4, 1, null, 7],
+      name: 'Agudo',
+      scores: [],
       comments: [
-        "↩️ (7,7)", "(6,6)", "🟨↪️ (8,1)", "Descanso", "↪️ (7,2)", "↪️ (6,1)", "↪️ (6,2)", "↪️ (7,3)",
-        "Lesionado", "Lesionado", "Lesionado", "(9,0)", "No convocado", "↪️ (7,4)", "(7,0)", "↪️ (7,3)",
-        "↪️ (6,7)", "↩️ (6,5)", "Descanso", "(7,4)", "↪️ (7,4)", "↩️ (6,9)", "No convocado", "↪️ (6,7)",
-        "No convocado","Victoria administrativa","↪️ (6,9)","(6,3)","No convocado","↪️ (7,5)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player2',
-      name: 'Álvaro',
-      scores: [-2, null, 2, null, 3, 2, 3, null, 6, 4, 2, null, 5, 3, null, 1, 3, 4, null, null, 6, 6, null, 3, null, null, 6, null, null, 5],
+      name: 'Gabri',
+      scores: [],
       comments: [
-        "↪️ (5,6)", "-", "↩️ (6,5)", "Descanso", "🟨↩️ (6,6)", "↩️ (6,5)", "↩️ (6,6)", "- ↩️",
-        "(7,3)", "(6,8)", "(6,4)", "-", "(7,0)", "↩️ (6,6)", "No convocado", "↩️ (6,3)",
-        "↩️ (6,6)", "↪️ (6,9)", "Descanso", "No convocado", "↩️ (7,2)", "↪️ (7,2)", "Sin grabación", "↩️ (6,7)",
-        "No convocado","Victoria administrativa","↩️ (7,3)","-","Sin grabación","↩️ (7,0)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player3',
-      name: 'Rafa',
-      scores: [14, 5, 10, null, 10, 7, 10, 15, 7, 3, 10, 1, null, 16, null, 10, null, null, null, 4, null, 10, null, 8, null, null, 7, 7, null, 17],
+      name: 'Álvaro',
+      scores: [],
       comments: [
-        "🟨🟢 (7,8+🟢)", "(7,1)", "(8,0)", "Descanso", "(8,2)", "(7,4)", "(8,0)", "🟨🟢 (8,5+🟢)",
-        "(7,4)", "🟨 (6,7)", "➡️(7,9+➡️)", "🟥 (7,4+🟥)", "Sancionado", "🟨🟢 (8,8+🟢)", "No convocado", "(8,2)",
-        "Lesionado", "Lesionado", "Descanso", "🟨🔴⬆️ (6,9)", "Sancionado", "➡️(7,9+➡️)", "Sin grabación", "(7,6)",
-        "Sin grabación","Victoria administrativa","➡️(7,3+➡️)","(7,4)","Sin grabación","🟢🟢 (9,2+🟢🟢)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
