--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -441,7 +441,7 @@
     {
       id: 'player1',
       name: 'Agudo',
-      scores: [],
+      scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
@@ -452,7 +452,7 @@
     {
       id: 'player2',
       name: 'Gabri',
-      scores: [],
+      scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
@@ -463,7 +463,7 @@
     {
       id: 'player3',
       name: 'Álvaro',
-      scores: [],
+      scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
         "-", "-", "-", "-", "-",  "-",
@@ -474,7 +474,7 @@
     {
       id: 'player4',
       name: 'Álvaro G.S.',
-      scores: [null, 4, 9, null, 6, 3, 12, 6, 0, -2, 1, 10, 6, null, 5, 5, 2, 3, null, 2, 9, 11, null, 15, null, null, null, null, null, 8],
+      scores: [null, null, null],
       comments: [
         "Lesionado", "↩️ (6,9)", "(7,9)", "Descanso", "↪️ (7,3)", "↪️ (6,7)", "🟢 (7,5+🟢)", "↪️ (7,3)",
         "(6,1)", "↪️ (5,5)", "🟨 (6,3)", "(8,2)", "(7,2)", "No convocado", "(7,0)", "(7,1)",
@@ -485,7 +485,7 @@
     {
       id: 'player5',
       name: 'Erik',
-      scores: [4, 5, null, null, 3, 5, null, 3, 3, null, null, 7, 4, 5, 10, 7, 2, null, null, -7, null, 8, null, null, null, null, 7, 6, null, null],
+      scores: [null, null, null],
       comments: [
         "↩️ (6,9)", "↪️ (7,1)", "No convocado", "Descanso", "↩️ (6,7)", "(7,0)", "No convocado", "↩️ (6,7)",
         "↩️ (6,7)", "No convocado", "No convocado", "↪️ (7,4)", "↪️ (6,8)", "↪️ (7,0)", "(8,1)", "(7,4)",
@@ -496,7 +496,7 @@
     {
       id: 'player6',
       name: 'José An',
-      scores: [2, 6, 8, null, 6, 7, 9, 9, 10, 1, 0, 6, null, null, 2, 7, 3, 4, null, 7, 10, 4, null, null, null, null, 4, 5, null, 4],
+      scores: [null, null, null],
       comments: [
         "↪️ (6,4)", "↩️ (7,3)", "➡️ (7,4+➡️)", "Descanso", "🟨↪️ (7,2)", "↪️ (7,4)", "↪️ (7,8)", "(7,9)",
         "(8,0)", "(6,2)", "(6,0)", "↩️ (7,2)", "Lesionado", "Lesionado", "🟨↩️ (6,5)", "↪️ (7,5)",
