--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -476,10 +476,10 @@
       name: 'Álvaro G.S.',
       scores: [null, null, null],
       comments: [
-        "Lesionado", "↩️ (6,9)", "(7,9)", "Descanso", "↪️ (7,3)", "↪️ (6,7)", "🟢 (7,5+🟢)", "↪️ (7,3)",
-        "(6,1)", "↪️ (5,5)", "🟨 (6,3)", "(8,2)", "(7,2)", "No convocado", "(7,0)", "(7,1)",
-        "🟨 (6,4)", "(6,7)", "Descanso", "🟨↪️ (6,4)", "(7,8)", "↪️➡️(8,3+➡️)", "Sin grabación", "🟨🟢 (8,4+🟢)",
-        "Sin grabación","Victoria administrativa","Lesionado","Lesionado","No convocado","(7,6)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
@@ -487,10 +487,10 @@
       name: 'Erik',
       scores: [null, null, null],
       comments: [
-        "↩️ (6,9)", "↪️ (7,1)", "No convocado", "Descanso", "↩️ (6,7)", "(7,0)", "No convocado", "↩️ (6,7)",
-        "↩️ (6,7)", "No convocado", "No convocado", "↪️ (7,4)", "↪️ (6,8)", "↪️ (7,0)", "(8,1)", "(7,4)",
-        "↪️ (6,4)", "No convocado", "Descanso", "🟥↩️ (5,8+🟥)", "Sancionado", "➡️(7,4+➡️)", "Sin grabación", "No convocado",
-        "No convocado","Victoria administrativa","↩️ (7,4)","↪️ (7,3)","Sin grabación","No convocado"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
@@ -498,230 +498,230 @@
       name: 'José An',
       scores: [null, null, null],
       comments: [
-        "↪️ (6,4)", "↩️ (7,3)", "➡️ (7,4+➡️)", "Descanso", "🟨↪️ (7,2)", "↪️ (7,4)", "↪️ (7,8)", "(7,9)",
-        "(8,0)", "(6,2)", "(6,0)", "↩️ (7,2)", "Lesionado", "Lesionado", "🟨↩️ (6,5)", "↪️ (7,5)",
-        "(6,7)", "🟨 (6,9)", "Descanso", "(7,4)", "(8,1)", "(6,9)", "Sin grabación", "No convocado",
-        "No convocado","Victoria administrativa","(6,9)","(7,1)","Sin grabación","↪️ (6,8)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
-      // Se va del equipo: ya no se actualiza
       id: 'player7',
       name: 'Carlos A',
-      scores: [0, null, null, null, 3, 3, 3, 2, null, 1, null, 2, 6, 1, null, null, null, null, null, null, null, null, null],
+      scores: [null, null, null],
       comments: [
-        "↩️ (6,1)", "No convocado", "No convocado", "Descanso", "↩️ (6,6)", "↩️ (6,6)", "↩️ (6,6)", "↩️ (6,5)",
-        "No convocado", "↩️ (6,2)", "-", "↩️ (6,4)", "(7,3)", "↩️↪️ (6,3)", "No convocado", "No convocado",
-        "No convocado", "No convocado", "Descanso", "No convocado", "No convocado", "No convocado", "No convocado"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player8',
       name: 'Carlacas',
-      scores: [4, 5, null, null, null, null, 9, 5, 2, 4, 2, 5, 5, 7, 5, 7, 4, 6, null, 5, null, null, null, 2, null, null, 5, null, null, 7],
+      scores: [null, null, null],
       comments: [
-        "🟨 (6,9)", "↪️ (7,1)", "Lesionado", "Descanso", "Lesionado", "Lesionado", "🟨↪️ (7,8)", "↪️ (7,0)",
-        "↪️ (6,5)", "(6,8)", "(6,5)", "(7,0)", "(7,0)", "(7,4)", "🟨↪️ (7,1)", "↪️ (7,5)",
-        "(6,8)", "🟨➡️ (7,0+➡️)", "Descanso", "↪️ (7,1)", "Lesionado", "Lesionado", "Sin grabación", "↩️ (6,4)",
-        "Sin grabación","Victoria administrativa","(7,1)","No convocado","Sin grabación","(7,5)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player9',
       name: 'Dani',
-      scores: [2, -8, 10, null, 8, 1, 8, 16, 7, 2, null, 4, 2, 4, 19, null, 3, 4, null, 4, 6, 4, null, 4, null, null, 10, 6, null, 5],
+      scores: [null, null, null],
       comments: [
-        "(6,5)", "🟥 (5,5+🟥)", "(8,1)", "Descanso", "(7,7)", "🟨 (6,3)", "(7,7)", "🟢➡️ (8,1+🟢+➡️)",
-        "🟨 (7,4)", "(6,4)", "Lesionado", "↪️ (6,8)", "(6,5)", "➡️ (6,6+➡️)", "🟢⬆️🟢➡️ (8,5+🟢⬆️+🟢+➡️)", "No convocado",
-        "(6,7)", "↪️ (6,8)", "Descanso", "🟨↪️ (6,8)", "(7,2)", "↪️ (6,8)", "Sin grabación", "(6,8)",
-        "Sin grabación","Victoria administrativa","↪️🟢 (7,5+🟢)","(7,2)","Sin grabación","↪️ (7,0)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player10',
       name: 'Agustín',
-      scores: [null, null, null, null, null, null, null, null, null, null, null, null, null, 3, null, 1, null, 3, null, 2, 2, 5, null, -1, null, null, null, 2, null, 5],
+      scores: [null, null, null],
       comments: [
-        "En el JG", "En el JG", "En el JG", "Descanso", "En el JG", "En el JG", "En el JG", "En el JG",
-        "En el JG", "En el JG", "En el JG", "En el JG", "En el JG", "↩️ (6,6)", "-", "↩️ (6,3)",
-        "No convocado", "↩️ (6,6)", "Descanso", "↩️ (6,4)", "↩️ (6,5)", "↩️ (7,0)", "No convocado", "↪️ (5,9)",
-        "Sin grabación","Victoria administrativa","-","↩️ (6,4)","Sin grabación","↩️ (7,0)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player26',
       name: 'Juan Pablo',
-      scores: [null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      scores: [null, null, null],
       comments: [
-        "En el JG", "En el JG", "En el JG", "Descanso", "En el JG", "En el JG", "En el JG", "En el JG",
-        "En el JG", "En el JG", "En el JG", "En el JG", "En el JG", "En el JG", "Sin ficha", "Sin ficha",
-        "Sin ficha", "Sin ficha", "Descanso", "Sin ficha", "Sin ficha", "Sin ficha", "Sin ficha", "Sin ficha",
-        "Sin grabación", "Victoria administrativa", "No convocado", "No convocado", "No convocado", "No convocado"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player11',
       name: 'Madero',
-      scores: [2, 4, 6, null, 2, 2, 18, 5, 1, 0, 6, 4, -1, 8, 3, 1, null, 5, null, 6, 10, 9, null, 7, null, null, 6, 4, null, 5],
+      scores: [null, null, null],
       comments: [
-        "↪️ (6,4)", "(6,9)", "🟨 (7,2)", "Descanso", "↪️ (6,4)", "↪️ (6,4)", "🟨↪️🟢🟢➡️ (7,9+🟢🟢+➡️)", "↪️ (7,1)",
-        "↪️ (6,2)", "↪️ (6,0)", "↪️ (7,2)", "↪️ (6,8)", "↪️ (5,8)", "🟨 (7,6)", "↪️ (6,7)", "↩️ (6,3)",
-        "No convocado", "(7,1)", "Descanso", "🟨↪️ (7,2)", "(8,0)", "↩️🟢 (7,1+🟢)", "Sin grabación", "➡️ (7,2+➡️)",
-        "Sin grabación","Victoria administrativa","(7,2)","(6,8)","Sin grabación","↩️ (7,0)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player12',
       name: 'Sagi',
-      scores: [0, 3, 7, null, 1, 0, 5, 5, 1, 3, 1, 4, 10, 5, 3, 7, 4, 5, null, 4, 7, 12, null, 4, null, null, 3, 4, null, 10],
+      scores: [null, null, null],
       comments: [
-        "🟨↪️ (6,1)", "↪️ (6,7)", "(7,4)", "Descanso", "↪️ (6,3)", "(6,1)", "↪️ (7,1)", "↪️ (7,0)",
-        "↪️ (6,2)", "↪️ (6,6)", "↪️ (6,3)", "(6,9)", "🟢 (7,3+🟢)", "↪️ (7,0)", "↩️ (6,6)", "↪️ (7,4)",
-        "(6,8)", "🟨↪️ (7,0)", "Descanso", "↪️ (6,9)", "🟨 (7,5)", "↪️🟢 (7,7+🟢)", "Sin grabación", "↪️ (6,8)",
-        "Sin grabación","Victoria administrativa","↪️ (6,7)","↪️ (6,8)","Sin grabación","🟨↪️🟢 (7,2+🟢)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player13',
       name: 'Gárate',
-      scores: [null, 4, null, null, 2, null, -1, 3, 2, 3, 4, 4, 2, 8, 1, 1, 3, 2, null, 2, 4, 10, null, 3, null, null, 3, 1, null, 10],
+      scores: [null, null, null],
       comments: [
-        "No convocado", "↩️ (6,8)", "- ↩️", "Descanso", "↩️ (6,4)", "No convocado", "🟨↩️ (5,9)", "↩️ (6,7)",
-        "↩️ (6,5)", "↩️ (6,6)", "↩️ (6,9)", "↩️ (6,8)", "↩️ (6,5)", "↩️➡️ (7,4+➡️)", "↪️ (6,2)", "↩️ (6,2)",
-        "↩️ (6,6)", "↩️ (6,5)", "Descanso", "↩️ (6,4)", "↪️ (6,8)", "🟢 (7,3+🟢)", "Sin grabación", "↪️ (6,7)",
-        "Sin grabación","Victoria administrativa","↪️ (6,7)","↩️ (6,3)","Sin grabación","↪️➡️➡️ (7,7+➡️➡️)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player14',
       name: 'Adri',
-      scores: [null, 4, 6, null, 4, 4, 9, 9, null, 7, 1, 4, null, 1, 5, 9, 3, 11, null, null, 7, 16, null, 6, null, null, 7, 3, null, 8],
+      scores: [null, null, null],
       comments: [
-        "No convocado", "↩️ (6,8)", "↪️ (7,3)", "Descanso", "(6,9)", "(6,8)", "🟨➡️ (7,7+➡️)", "🟨↪️🟢 (7,3+🟢)",
-        "No convocado", "(7,5)", "(6,2)", "↪️ (6,9)", "Lesionado", "↪️ (6,3)", "➡️ (6,9+➡️)", "↪️➡️ (7,6+➡️)",
-        "(6,7)", "↪️🟢 (7,4+🟢)", "Descanso", "No convocado", "🟨 (7,5)", "🟢➡️ (8,8+🟢+➡️)", "Sin grabación", "↪️ (7,2)",
-        "Sin grabación","Victoria administrativa","🟢 (6,9+🟢)","↪️ (6,6)","Sin grabación","↩️➡️ (7,5+➡️)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player15',
       name: 'Martín',
-      scores: [3, 5, 10, null, 7, null, 13, 14, 1, 3, null, 5, null, 5, 10, 10, 5, 14, null, 6, 9, null, null, 6, null, null, 14, 7, null, 12],
+      scores: [null, null, null],
       comments: [
-        "🟨↩️ (6,7)", "↩️ (7,0)", "↪️➡️ (7,9+➡️)", "Descanso", "(7,4)", "No convocado", "🟨↪️🟢 (8,0+🟢)", "🟢➡️ (8,4+🟢+➡️)",
-        "(6,3)", "(6,7)", "No convocado", "↪️ (7,1)", "No convocado", "(7,0)", "(8,3)", "(8,1)",
-        "🟨 (7,0)", "🟢➡️ (8,0+🟢+➡️)", "Descanso", "(7,2)", "🟨↪️ (7,9)", "No convocado", "Sin grabación", "↩️ (7,3)",
-        "No convocado","Victoria administrativa","➡️➡️ (9,3+➡️➡️)","↪️ (7,4)","Sin grabación","↪️🟢 (7,8+🟢)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player16',
       name: 'Mario Perea',
-      scores: [2, 5, null, null, 1, 3, 3, 4, 3, 4, 1, 4, 0, 2, null, 2, null, null, null, 2, 3, 13, null, 12, null, null, 3, null, null, null],
+      scores: [null, null, null],
       comments: [
-        "↪️ (6,5)", "↪️ (7,0)", "No convocado", "Descanso", "↩️ (6,3)", "↩️ (6,6)", "↩️ (6,6)", "↩️ (6,8)",
-        "↩️ (6,7)", "↩️ (6,9)", "↪️ (6,2)", "↩️ (6,8)", "(6,0)", "↩️ (6,5)", "No convocado", "↩️ (6,4)",
-        "No convocado", "No convocado", "Descanso", "↩️ (6,5)", "↪️ (6,6)", "↪️🟢🟢 (7,5+🟢🟢)", "Sin grabación", "↪️🟢⬆️ (7,8+🟢⬆️)",
-        "Sin grabación","Sancionado","↩️ (6,7)","No convocado","Sin grabación","No convocado"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player17',
       name: 'Alvarito',
-      scores: [11, 6, 9, null, 2, -1, null, null, 4, 8, 3, 2, 2, 9, 10, 10, 5, 16, null, 5, 7, 19, null, 7, null, null, 12, 15, null, 7],
+      scores: [null, null, null],
       comments: [
-        "🟢 (7,7+🟢)", "↪️ (7,2)", "➡️ (7,6+➡️)", "Descanso", "↪️ (6,4)", "🟨↪️ (5,8)", "Lesionado", "Lesionado",
-        "↩️ (6,9)", "🟨↩️🟢⬆️ (7,0+🟢⬆️)", "(6,7)", "↩️ (6,4)", "(6,5)", "↪️🟢 (7,3+🟢)", "🟢 (7,5+🟢)", "↪️🟢 (7,4+🟢)",
-        "(7,1)", "🟢➡️➡️ (9,0+🟢+➡️➡️)", "Descanso", "🟨 (7,0)", "(7,4)", "🟢➡️➡️➡️➡️ (10+🟢+➡️➡️➡️➡️)", "Sin grabación", "(7,5)",
-        "Sin grabación","Victoria administrativa","➡️ (8,6+➡️)","🟢⬆️➡️ (8,7+🟢⬆️+➡️)","Sin grabación","(7,5)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player18',
       name: 'Mario',
-      scores: [null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, 2, 1, 2, null, null, null, null, null, 1, null, null, null, 2, null, 3],
+      scores: [null, null, null],
       comments: [
-        "En el JG", "En el JG", "En el JG", "Descanso", "En el JG", "En el JG", "En el JG", "En el JG",
-        "En el JG", "En el JG", "En el JG", "En el JG", "En el JG", "En el JG", "No convocado", "↩️ (6,4)",
-        "↩️ (6,3)", "↩️ (6,4)", "Descanso", "Lesionado", "Lesionado", "Lesionado", "No convocado", "↩️ (6,3)",
-        "No convocado","Victoria administrativa","No convocado","↩️ (6,4)","Sin grabación","↩️ (6,6)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player19',
       name: 'Jaime',
-      scores: [null, null, null, null, null, null, null, null, null, null, 0, null, null, 6, 2, null, null, null, null, 1, null, null, null, null, null, null, null, 2, null, 2],
+      scores: [null, null, null],
       comments: [
-        "Sin equipo", "Sin equipo", "Sin equipo", "Descanso", "No convocado", "↩️ -", "No convocado", "No convocado",
-        "-", "No convocado", "↩️ (6,1)", "↩️ -", "No convocado", "↩️➡️ (7,0+➡️)", "↩️ (6,4)", "No convocado",
-        "No convocado", "No convocado", "Descanso", "↩️ (6,3)", "No convocado", "No convocado", "Sin grabación", "No convocado",
-        "No convocado","Victoria administrativa","No convocado","↩️ (6,4)","Sin grabación","↩️ (6,4)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player20',
       name: 'Fer',
-      scores: [5, 4, 27, null, 5, 10, 10, 14, 4, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      scores: [null, null, null],
       comments: [
-        "(7,1)", "(6,8)", "↪️🟢⬆️🟢🟢🟢🟢<br>(10+🟢🟢🟢🟢+🟢⬆️)", "Descanso", "(7,1)", "🟢 (7,4+🟢)", "➡️ (7,8+➡️)", "↪️🟢➡️ (8,4+🟢+➡️)",
-        "↪️➡️ (6,6+➡️)", "Lesionado", "Lesionado", "Lesionado", "Lesionado", "Lesionado", "Lesionado", "Lesionado",
-        "Lesionado", "Lesionado", "Descanso", "Lesionado", "Lesionado", "Lesionado", "Lesionado", "Lesionado",
-        "Lesionado", "Victoria administrativa", "Lesionado", "Lesionado","Lesionado","Lesionado"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player21',
       name: 'Elo',
-      scores: [2, -2, 9, null, 1, null, 1, 4, 3, 2, 3, 3, 1, 12, 8, 5, 1, 13, null, 2, 3, 0, null, 3, null, null, 16, 8, null, 3],
+      scores: [null, null, null],
       comments: [
-        "(6,4)", "↪️ (5,6)", "↩️🟢 (7,3+🟢)", "Descanso", "🟨↩️ (6,3)", "No convocado", "↩️ (6,3)", "↩️ (6,8)",
-        "🟨🟢 (6,0+🟢)", "↪️ (6,4)", "↪️ (6,7)", "↪️ (6,6)", "(6,2)", "↪️🟢 (7,8+🟢)", "↪️🟢 (7,0+🟢)", "↪️ (7,1)",
-        "↪️ (6,3)", "🟨🟢🟢 (7,5+🟢🟢)", "Descanso", "↪️ (6,5)", "↩️ (6,6)", "↩️ (6,1)", "No convocado", "↩️ (6,7)",
-        "Sin grabación","Victoria administrativa","↩️🟢🟢 (8,0+🟢🟢)","↪️🟢 (7,0+🟢)","Sin grabación","↪️ (6,6)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player22',
       name: 'David',
-      scores: [1, 2, null, null, null, 0, 2, null, null, null, null, null, null, 3, 2, 2, null, null, null, 1, 4, 9, null, 4, null, null, null, 2, null, 4],
+      scores: [null, null, null],
       comments: [
-        "↩️ (6,3)", "↩️ (6,4)", "- ↩️", "Descanso", "Lesionado", "↩️ (6,0)", "↩️ (6,4)", "- ↩️",
-        "-", "-", "No conovcado", "No convocado", "No convocado", "↩️ (6,7)", "↩️ (6,5)", "↩️ (6,5)",
-        "No convocado", "-", "Descanso", "↩️ (6,3)", "↩️ (6,8)", "↩️🟢 (7,3+🟢)", "Sin grabación", "↪️ (6,8)",
-        "Sin grabación","Victoria administrativa","Lesionado","↩️ (6,4)","Sin grabación","↩️ (6,8)"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player23',
       name: 'Edu (CD)',
-      scores: [null, null, null, null, null, null, null, null, null, null, null, null, -1, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      scores: [null, null, null],
       comments: [
-        "En el CD", "En el CD", "En el CD", "Descanso", "En el CD", "En el CD", "En el CD", "En el CD",
-        "En el CD", "En el CD", "En el CD", "En el CD", "↩️ (5,9)", "En el CD", "En el CD", "En el CD",
-        "En el CD", "En el CD", "Descanso", "En el CD", "En el CD", "En el CD", "En el CD", "En el CD",
-        "En el CD", "Victoria administrativa", "En el CD", "En el CD", "En el CD", "En el CD"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player24',
       name: 'Joaquín (CB)',
-      scores: [null, null, null, null, null, null, null, null, null, null, 3, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      scores: [null, null, null],
       comments: [
-        "En el CB", "En el CB", "En el CB", "Descanso", "En el CB", "En el CB", "En el CB", "En el CB",
-        "En el CB", "En el CB", "↩️ (6,6)", "En el CB", "En el CB", "En el CB", "En el CB", "En el CB",
-        "En el CB", "En el CB", "Descanso", "En el CB", "En el CB", "En el CB", "En el CB", "En el CB",
-        "En el CB", "Victoria administrativa", "En el CB", "En el CB", "En el CB", "En el CB"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     },
     {
       id: 'player25',
       name: 'Kebe (CB)',
-      scores: [null, null, null, null, null, null, null, null, null, null, 8, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      scores: [null, null, null],
       comments: [
-        "En el CB", "En el CB", "En el CB", "Descanso", "En el CB", "En el CB", "En el CB", "En el CB",
-        "En el CB", "En el CB", "↩️🟢(7,1+🟢)", "En el CB", "En el CB", "En el CB", "En el CB", "En el CB",
-        "En el CB", "En el CB", "Descanso", "En el CB", "En el CB", "En el CB", "En el CB", "En el CB",
-        "En el CB", "Victoria administrativa", "En el CB", "En el CB", "En el CB", "En el CB"
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
       ]
     }
   ];
