--- a/InformesPost-partido.html
+++ b/InformesPost-partido.html
@@ -24,7 +24,7 @@
 
 <div style="padding: 10px; float: left; width: 45%; text-align: center;">
   <a
-    
+    href="https://docs.google.com/document/d/1hMSLiXhlGXMEVsHO0jyivQy9-d58nVq0K5ue4hCGWl8/edit?usp=sharing"
     target="_blank">
     <img src="Jornada1.jpg" alt="Jornada 1" class="imagen" height="333" width="499" />
 </a></div>
@@ -37,7 +37,7 @@
     <img src="Jornada2.jpg" height="333" width="499"/></a></div>
 
 <a
-  
+  href="https://docs.google.com/document/d/1hMSLiXhlGXMEVsHO0jyivQy9-d58nVq0K5ue4hCGWl8/edit?usp=sharing"
   target="_blank">
   <div style="padding: 10px; float: left; width: 45%; text-align: center; color: black">
     <em>
