--- a/index.html
+++ b/index.html
@@ -69,31 +69,6 @@ font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
          class="imagen"
          src="https://www.adslzone.net/app/uploads-adslzone.net/2019/07/image.psd175-930x523.jpg"
          width="400" height="400"></a></div>
-<div style="padding: 10px; float: right; width: 45%; text-align: center;">
-  <a
-    href="StatsTemp2324.html"
-    target="_blank">
-    <img alt="Logo stats 25 26"
-         class="imagen"
-         src="https://www.adslzone.net/app/uploads-adslzone.net/2019/07/image.psd175-930x523.jpg"
-         width="400" height="400"></a></div>
-<br>
-<a
-  href="StatsTemp25-26.html"
-  target="_blank">
-  <div style="padding: 10px; float: left; width: 45%; text-align: center; color: black">
-    <ins><em>Stats Temp. 24/25</em></ins>
-  </div>
-</a>
-<a
-  href="StatsTemp2324.html"
-  target="_blank">
-  <div style="padding: 10px; float: right; width: 45%; text-align: center; color: black">
-    <ins><em>Stats Temp. 23/24</em></ins>
-  </div>
-</a>
-
-
 <div style="padding: 10px; float: left; width: 45%; text-align: center;">
   <a
     href="EncuestasMVP2526.html"
@@ -102,15 +77,14 @@ font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
          class="imagen"
          src="https://imgs.search.brave.com/UhxafFU6jXg4s8aRfjFcItjVR_hFF4lLTOiLSbrPEuY/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90My5m/dGNkbi5uZXQvanBn/LzA1LzI3LzkzLzEy/LzM2MF9GXzUyNzkz/MTI1Ml9mTGZ0U2NL/Q2hRbXlYVmJTRTho/QzhPU2RCV3VicHNU/Si5qcGc"
          width="400" height="400"></a></div>
-<div style="padding: 10px; float: right; width: 45%; text-align: center;">
-  <a
-    href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html"
-    target="_blank">
-    <img alt="Simbología y sistema de puntuación"
-         class="imagen"
-         src="https://img.asmedia.epimg.net/resizer/v2/X7U2SU7TDNGOFOPTPPI25AZVGA.jpg?auth=f8cd42fc855e263606eb02ec2810a560114b5a972013eb1aa7e48ddbc84022be&width=644&height=362&focal=658%2C159"
-         width="400" height="400"></a></div>
 <br>
+<a
+  href="StatsTemp25-26.html"
+  target="_blank">
+  <div style="padding: 10px; float: left; width: 45%; text-align: center; color: black">
+    <ins><em>Stats Temp. 25/26</em></ins>
+  </div>
+</a>
 <a
   href="EncuestasMVP2526.html"
   target="_blank">
@@ -118,13 +92,27 @@ font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
     <ins><em>Encuestas MVP 25/26</em></ins>
   </div>
 </a>
-<a
-  href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html"
-  target="_blank">
-  <div style="padding: 10px; float: right; width: 45%; text-align: center; color: black">
+
+
+<div style="padding: 10px; width: 100%; text-align: center;">
+  <a
+    href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html"
+    target="_blank">
+    <img alt="Simbología y sistema de puntuación"
+         class="imagen"
+         src="https://img.asmedia.epimg.net/resizer/v2/X7U2SU7TDNGOFOPTPPI25AZVGA.jpg?auth=f8cd42fc855e263606eb02ec2810a560114b5a972013eb1aa7e48ddbc84022be&width=644&height=362&focal=658%2C159"
+         width="400" height="400">
+  </a>
+</div>
+
+<div style="padding: 10px; width: 100%; text-align: center; color: black">
+  <a
+    href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html"
+    target="_blank"
+    style="text-decoration: none; color: inherit;">
     <ins><em>Simbología y sistema de puntuación</em></ins>
-  </div>
-</a>
+  </a>
+</div>
 
 
 
