--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
 </a>
 
 
-<div style="padding: 10px; width: 100%; text-align: center;">
+<div style="padding: 10px; width: 45%; margin: 0 auto; text-align: center;">
   <a
     href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html"
     target="_blank">
@@ -105,14 +105,15 @@ font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
   </a>
 </div>
 
-<div style="padding: 10px; width: 100%; text-align: center; color: black">
-  <a
-    href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html"
-    target="_blank"
-    style="text-decoration: none; color: inherit;">
+<br>
+
+<a
+  href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html"
+  target="_blank">
+  <div style="padding: 10px; width: 45%; margin: 0 auto; text-align: center; color: black;">
     <ins><em>Simbología y sistema de puntuación</em></ins>
-  </a>
-</div>
+  </div>
+</a>
 
 
 
